style and markup

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Trivia Game</title>
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/css/style.css">
+	<title>Jeopardy!</title>
 </head>
 <body>
-	
+	<div class="container jeopardy_screen"></div>
+	<script src="assets/javascript/jquery-3.3.1.min.js"></script>
+	<script src="assets/javascript/app.js"></script>
 </body>
-</html> 
+</html> `
