--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 	<div class="container jeopardy_screen"></div>
 	<script src="assets/javascript/jquery-3.3.1.min.js"></script>
+	<script src="assets/javascript/clues.js"></script>
 	<script src="assets/javascript/app.js"></script>
 </body>
 </html> `
