separate game object.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<div class="container jeopardy_screen"></div>
 	<script src="assets/javascript/jquery-3.3.1.min.js"></script>
 	<script src="assets/javascript/clues.js"></script>
+	<script src="assets/javascript/Jeopardy.js"></script>
 	<script src="assets/javascript/app.js"></script>
 </body>
 </html> `
