--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/style.css">
 	<title>Jeopardy!</title>
 </head>
-<body>
+<body class="bg-dark">
 	<div class="container jeopardy_screen"></div>
 	<script src="assets/javascript/jquery-3.3.1.min.js"></script>
 	<script src="assets/javascript/clues.js"></script>
