firebase for highscores!

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 <body class="bg-dark">
 	<div class="container jeopardy_screen"></div>
-	<script src="assets/javascript/jquery-3.3.1.min.js"></script>
 	<script src="assets/javascript/clues.js"></script>
 	<script src="assets/javascript/Jeopardy.js"></script>
+	<script src="assets/javascript/jquery-3.3.1.min.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
+	<script>
+	</script>
 	<script src="assets/javascript/app.js"></script>
 </body>
 </html> `
